--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <p> hi this is a change</p>
    <script src="index.js"></script> 
 </body>
 </html>
